--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-streamlit
-pandas
-requests
-gdown  # Only if using Google Drive for large files
+streamlit==1.32.2
+pandas==2.0.3
+requests==2.31.0
+gdown==4.7.1
+patool==1.12
