--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-streamlit==1.32.2
-pandas==2.0.3
-requests==2.31.0
-gdown==4.7.1
-patool==1.12
+streamlit
+pandas
+numpy
+scikit-learn
+scipy
+requests
